--- a/styles/style.css
+++ b/styles/style.css
@@ -3,10 +3,32 @@ body {
     margin: 0;
     padding: 0;
 }
+
 .navBg {
     background-image: url('/assets/RestaurantMockupFiles/assets/bgtexture.jpg');
     padding: 0;
-    
+
+}
+
+.logoBrand {
+    margin-top: 14px;
+    width: 250px;
+    height: 92px;
+}
+
+.navRow {
+    width: 1920px;
+    margin: 0;
+    padding: 0;
+
+}
+
+.navbar-collapse {
+    margin: 0;
+    float: right;
+    margin-top: 45px;
+    margin-bottom: 60px;
+    margin-right: 140px;
 }
 
 .navStyle {
@@ -20,21 +42,41 @@ body {
     margin-top: 14px;
     margin-right: 184px;
 }
+
 #navigation * {
-    color: #5F002B; 
-    
+    color: #5F002B;
+    font-size: 20px;
 }
 
-.homeHeroImg{
+/* .row {
+    margin: 0;
+    padding: 0;
+} */
+
+.homeHeroImg {
     width: 100%;
     height: 600px;
     background-size: contain;
     background-position: center center;
-    transform: translate(-30%, 1%);
+}
+
+.bodyImgCont {
+    display: flex;
+    justify-content: center;
+    margin-top: 100px;
+}
+.d-flex {
+    padding: 0;
+}
+.homeImgCont {
+    width: 674px;
+    height: 449.5px;
 }
 .homeSingleImg {
     width: 674px;
     height: 449.5px;
+    padding-right: 16px;
+    /* float: right; */
 }
 
 
@@ -42,7 +84,10 @@ body {
     background-color: white;
     width: 950px;
     height: 265px;
-    float: right;
+    /* margin-top: 100px; */
+    /* margin-right: 140px; */
+    padding: 0;
+
 }
 
 .firstpgHeadertxt {
@@ -50,10 +95,13 @@ body {
     font-size: 50px;
     margin: 0;
 }
+
 .firstpgPgtxt {
-    color:#5F002B;
+    color: #5F002B;
     font-size: 20px;
     margin: 0;
+    max-width: 950px;
+    padding: 16px;
 }
 
 .homeImageImg {
@@ -72,7 +120,7 @@ body {
     height: 31.6px;
 }
 
-.copyrightTxt{
+.copyrightTxt {
     font-size: 20px;
     margin: 0;
 }
