--- a/styles/calebstyles.css
+++ b/styles/calebstyles.css
@@ -1,36 +1,102 @@
+/* Universal */
+
+@font-face {
+    font-family: 'Montauk';
+    src: url('/fonts/Montauk-Regular.otf') format('opentype');
+}
+
+@font-face {
+    font-family: 'MontaukLight';
+    src: url('/fonts/Montauk-Light.otf') format('opentype');
+}
+@font-face {
+    font-family: 'Fugaz';
+    src: url('/fonts/FugazOne-Regular.ttf') format('truetype');
+}
+
 body {
     background-image: url(/assets/RestaurantMockupFiles/assets/bgtexture.jpg);
 }
+
+/* About Page */
+
+.cont-box{  
+    width: 90%;
+    height: auto;
+    margin: 0 auto;
+    padding: 0px 0px !important;
+}
 .about-img {
-    padding: 0 !important;
+    padding: 0px 0px 0px 10px !important;
     text-align: right;
 }
 .textbox {
     background-color: white;
-    height: 550px;
-    width: 650px;
+    height: 100%;
+    width: 100%;
     color: #5f002b;
-    font-size: 12px;
+    font-size: 18px;
+    line-height: normal;
     padding: 20px 30px;
 }
+
+@media only screen and (min-width: 1441px) and (max-width: 1800px){
+    .textbox{
+        font-size: medium;
+        line-height: 1.1;
+    }
+}
+
+@media only screen and (min-width: 1250px) and (max-width: 1440px){
+    .textbox{
+        font-size: medium;
+        line-height: normal;
+    }
+}
+
+@media only screen and (min-width: 1025px) and (max-width: 1249px){
+    .textbox{
+        font-size: small;
+        line-height: normal;
+    }
+}
+
+@media only screen and (max-width: 1024px){
+    .textbox{
+        font-size: small;
+        line-height: normal;
+    }
+}
+
+@media only screen and (max-width: 1024px){
+    .textbox h1 {
+        font-size: medium;
+    }
+}
+
+.textbox p{
+    font-family: 'MontaukLight', sans-serif;
+}
+
+.textbox h1 {
+    font-family: 'Fugaz', sans-serif;
+}
+
 
 .text {
     text-align: center;
     background-color: white;
     color: #5f002b;
-    padding: 10px;
-    margin: 0 auto;
+    padding: 10px 0px;
+    font-family: 'Fugaz', sans-serif;
+    width: 100%;
 }
 
 .space-top {
     padding-top: 50px;
     padding-bottom: 50px;
 }
-.grid-container{
-    display: inline-grid;
-    column-gap: 10px;
-    row-gap: 10px;
-}
+
 .card {
     border-radius: 0;
 }
@@ -42,15 +108,40 @@ body {
 .card-body{
     color: #5f002b;
 }
+.card-text{
+    font-family: 'MontaukLight', sans-serif;
+    line-height: 1.1;
+    padding-bottom: 10px;
+    margin: 0px 5px;
+}
+
+.card-title{
+    font-family: 'Fugaz', sans-serif;
+    padding-left: 10px;
+}
 
 .cardRowSpace {
     padding: 10px 0px;
+}
+
+.card-side{
+    border-radius: 0;
+}
+
+.card-side img{
+    border-radius: 0;
+}
+
+.margBot{
+    margin: 10px auto;
 }
 
 .noPad {
     padding: 4px !important;
 }
 
+
+/* Photos Page */
 
 .sizeImg img {
     height: 300px;
@@ -61,14 +152,22 @@ body {
     border: 10px white solid;
 }
 
-.rowSpace{
-    padding: 10px 0px;
-}
-
 .colSpace{
     padding-right: 5px !important;
     padding-left: 5px !important;
 }
 .boxSpace {
     padding: 20px 0px;
+}
+
+@media only screen and (max-width: 767px){
+    .colSpace{
+        padding-bottom: 10px;
+    }
+}
+
+@media only screen and (min-width: 768px){
+    .rowSpace{
+        padding-bottom: 10px;
+    }
 }
