--- a/styles/style.css
+++ b/styles/style.css
@@ -4,24 +4,39 @@ body {
     padding: 0;
 }
 
+@font-face {
+    font-family: 'Montauk';
+    src: url('/fonts/Montauk-Regular.otf') format('opentype');
+}
+
+@font-face {
+    font-family: 'MontaukLight';
+    src: url('/fonts/Montauk-Light.otf') format('opentype');
+}
+@font-face {
+    font-family: 'Fugaz';
+    src: url('/fonts/FugazOne-Regular.ttf') format('truetype');
+}
+
 .navBg {
     background-image: url('/assets/RestaurantMockupFiles/assets/bgtexture.jpg');
     padding: 0;
+    max-width: 1920px;
 
 }
 
 .logoBrand {
     margin-top: 14px;
-    width: 250px;
-    height: 92px;
+    max-width: 250px;
+    max-height: 92px;
 }
 
-.navRow {
-    width: 1920px;
+/* .navRow {
+    max-width: 1920px;
     margin: 0;
     padding: 0;
 
-}
+} */
 
 .navbar-collapse {
     margin: 0;
@@ -46,6 +61,8 @@ body {
 #navigation * {
     color: #5F002B;
     font-size: 20px;
+    font-family: 'Fugaz';
+    max-width: 1920px;
 }
 
 /* .row {
@@ -54,36 +71,39 @@ body {
 } */
 
 .homeHeroImg {
-    width: 100%;
-    height: 600px;
+    max-width: 1920px;
+    max-height: 600px;
     background-size: contain;
     background-position: center center;
 }
 
 .bodyImgCont {
-    display: flex;
-    justify-content: center;
     margin-top: 100px;
 }
 .d-flex {
     padding: 0;
 }
+
 .homeImgCont {
-    width: 674px;
-    height: 449.5px;
+    max-width: 882px;
+    max-height: 449.5px;
 }
 .homeSingleImg {
-    width: 674px;
-    height: 449.5px;
-    padding-right: 16px;
+    max-width: 882px;
+    max-height: 500px;
+    padding-right: 8px;
     /* float: right; */
+    margin-left: 140px;
 }
-
+.firstpgTxtCont {
+    padding-left: 8px;
+    margin-right: 140px;
+}
 
 .firstpgTxt {
     background-color: white;
-    width: 950px;
-    height: 265px;
+    max-width: 950px;
+    max-height: 200px;
     /* margin-top: 100px; */
     /* margin-right: 140px; */
     padding: 0;
@@ -94,6 +114,8 @@ body {
     color: #5F002B;
     font-size: 50px;
     margin: 0;
+    padding-left: 16px;
+    font-family: 'Fugaz';
 }
 
 .firstpgPgtxt {
@@ -101,26 +123,38 @@ body {
     font-size: 20px;
     margin: 0;
     max-width: 950px;
-    padding: 16px;
+    /* padding: 16px; */
+    font-family: 'Montauk';
+    padding-right: 16px;
+    padding-left: 16px;
+    padding-bottom: 0px;
 }
 
 .homeImageImg {
-    width: 950px;
-    height: 185px;
+    max-width: 950px;
+    max-height: 300px;
 }
 
 .footerTxt {
     font-size: 20px;
-    margin: 0;
+    margin-left: 140px;
+    margin-top: 20px;
+    font-family: 'Montauk';
+    color: #5F002B;
 }
 
 .footerLogo {
     font-size: 20px;
-    width: 100px;
-    height: 31.6px;
+    max-width: 100px;
+    max-height: 31.6px;
+    margin-right: 140px;
+    margin-left: auto;
 }
 
 .copyrightTxt {
     font-size: 20px;
-    margin: 0;
+    margin-right: 140px;
+    text-align: right;
+    font-family: 'Montauk';
+    color: #5F002B;
 }
