--- a/styles/calebstyles.css
+++ b/styles/calebstyles.css
@@ -56,7 +56,7 @@ body {
 
 @media only screen and (min-width: 1025px) and (max-width: 1249px){
     .textbox{
-        font-size: small;
+        font-size: 14px;
         line-height: normal;
     }
 }
