--- a/styles/style.css
+++ b/styles/style.css
@@ -24,14 +24,17 @@ body {
     /* max-width: 1920px; */
 
 }
+.navbar-collapse{
+    text-align: right;
+}
 .navMenu {
-    max-width: 1920px;
+    width: 100%;
 }
 
 .logoBrand {
     margin-top: 14px;
-    max-width: 250px;
-    max-height: 92px;
+    width: 250px;
+    height: 92px;
 }
 
 /* .navRow {
@@ -48,11 +51,11 @@ body {
     margin-bottom: 60px;
     margin-right: 140px;
 }
-/* 
+
 .navStyle {
     margin: 0;
     padding: 0;
-} */
+}
 
 .navbar-brand {
     padding: 0;
@@ -65,7 +68,7 @@ body {
     color: #5F002B;
     font-size: 20px;
     font-family: 'Fugaz';
-    max-width: 1920px;
+    width: 100%;
 }
 
 /* .row {
@@ -74,8 +77,8 @@ body {
 } */
 
 .homeHeroImg {
-    max-width: 1920px;
-    max-height: 600px;
+    width: 100%;
+    height: 600px;
     background-size: contain;
     background-position: center center;
 }
@@ -88,12 +91,12 @@ body {
 }
 
 .homeImgCont {
-    max-width: 882px;
-    max-height: 449.5px;
+    width: 882px;
+    height: 449.5px;
 }
 .homeSingleImg {
-    max-width: 882px;
-    max-height: 500px;
+    width: 882px;
+    height: 500px;
     padding-right: 8px;
     /* float: right; */
     margin-left: 140px;
@@ -105,8 +108,8 @@ body {
 
 .firstpgTxt {
     background-color: white;
-    max-width: 950px;
-    max-height: 200px;
+    width: 950px;
+    height: 200px;
     /* margin-top: 100px; */
     /* margin-right: 140px; */
     padding: 0;
@@ -125,7 +128,7 @@ body {
     color: #5F002B;
     font-size: 20px;
     margin: 0;
-    max-width: 950px;
+    width: 950px;
     /* padding: 16px; */
     font-family: 'Montauk';
     padding-right: 16px;
@@ -134,8 +137,8 @@ body {
 }
 
 .homeImageImg {
-    max-width: 950px;
-    max-height: 300px;
+    width: 950px;
+    height: 300px;
 }
 
 .footerTxt {
@@ -148,8 +151,8 @@ body {
 
 .footerLogo {
     font-size: 20px;
-    max-width: 100px;
-    max-height: 31.6px;
+    width: 100px;
+    height: 31.6px;
     margin-right: 140px;
     margin-left: auto;
 }
