--- a/styles/style.css
+++ b/styles/style.css
@@ -24,9 +24,6 @@ body {
     /* max-width: 1920px; */
 
 }
-.navbar-collapse{
-    text-align: right;
-}
 .navMenu {
     width: 100%;
 }
@@ -49,7 +46,6 @@ body {
     float: right;
     margin-top: 45px;
     margin-bottom: 60px;
-    margin-right: 140px;
 }
 
 .navStyle {
@@ -68,7 +64,7 @@ body {
     color: #5F002B;
     font-size: 20px;
     font-family: 'Fugaz';
-    width: 100%;
+    /* width: 100%; */
 }
 
 /* .row {
@@ -79,31 +75,33 @@ body {
 .homeHeroImg {
     width: 100%;
     height: 600px;
-    background-size: contain;
-    background-position: center center;
+    /* background-size: contain; */
+    /* background-position: center center; */
 }
 
 .bodyImgCont {
     margin-top: 100px;
 }
-.d-flex {
-    padding: 0;
+
+.homSingImgCont {
+    padding-right: 8px;
 }
 
+
 .homeImgCont {
-    width: 882px;
+    width: 600px;
     height: 449.5px;
 }
 .homeSingleImg {
-    width: 882px;
-    height: 500px;
-    padding-right: 8px;
+    width: 825px;
+    height: 400px;
     /* float: right; */
-    margin-left: 140px;
+    margin-left: 60px;
 }
 .firstpgTxtCont {
     padding-left: 8px;
-    margin-right: 140px;
+    padding-right: 0px;
+    margin-right: 50px;
 }
 
 .firstpgTxt {
@@ -138,7 +136,7 @@ body {
 
 .homeImageImg {
     width: 950px;
-    height: 300px;
+    height: 196px;
 }
 
 .footerTxt {
