--- a/styles/markTest.css
+++ b/styles/markTest.css
@@ -1,5 +1,11 @@
 body {
     background-image: url(../assets/RestaurantMockupFiles/assets/bgtexture.jpg);
+    display: flex;
+    justify-content: center;
+}
+.containerBody-fluid{
+    border: 2px solid black;
+    width: 85%;
 }
 /* Text Settings Start*/
 .menuHead {
@@ -8,32 +14,39 @@ body {
 
 .menuSub {
     color: #5f002b;
+    font-size: 10px;
+}
+
+.menuPrice {
+    color: #5f002b;
+
+}
+
+hr {
+    color: #5f002b;
 }
 /* Text Settings End */
 
 /* Container Card Start */
 .containerCard1-fluid{
-    width: 35%;
     background-color: white;
     border: 2px solid red;
-    margin-right: .5%;
 }
 .containerCard2-fluid{
-    width: 35%;
+    
     background-color: white;
     border: 2px solid red;
-    margin-left: .5%;
 }
 
 .containerCard3-fluid{
-    width: 35%;
+    
     background-color: white;
     border: 2px solid red;
     margin-right: .5%;
     margin-top: 1%;
 }
 .containerCard4-fluid{
-    width: 35%;
+    
     background-color: white;
     border: 2px solid red;
     margin-left: .5%;
@@ -72,19 +85,16 @@ body {
 .containerFood-fluid{
     border: 2px solid blue;
     margin-bottom: 5%;
+    width: 95%;
 }
 
 .containerMenu-fluid{
     border: 2px solid orange;
-    width: 100%;
+    width: 95%;
 
 }
 
-.menuPrice {
-    color: #5f002b;
-    font-size: 20px;
 
-}
 
 .rowSpace{
     display: flex;
@@ -93,17 +103,10 @@ body {
 
 /* Cater Page Start */
 
-.containerBody-fluid{
-    border: 2px solid black;
-    display: flex;
-    justify-content: center;
-    width: 80;
-}
 
-.containerBody2-fluid{
-    border: 2px solid white;
-    width: 85%;
-}
+
+
+
 
 .containerCater-fluid {
     border: 2px solid pink;
@@ -113,54 +116,68 @@ body {
 
 /* Cater Hero */
 
-.rowHero {
-    border: orange solid 2px;
-    width: 100%;
-    
+
+.caterHero{
+    margin-bottom: 5%;
 }
 
-.caterHero {
-    background-image: url(../assets/RestaurantMockupFiles/assets/cateringHero.jpg);
-    padding-top: 15%;
-    padding-bottom: 15%;
-    background-repeat: no-repeat;
-}
+
 
 /* Cater Hero End */
 
-.colCaterMain-fluid {
-    background-image: url(../assets/RestaurantMockupFiles/assets/cateringMaine.jpg);
-    background-repeat: no-repeat;
-    padding-top: 100%;
-    padding-bottom: 100%;
-}
 
-.caterImage {
+
+.CaterImage {
     background-image: url(../assets/RestaurantMockupFiles/assets/cateringMaine.jpg);
     background-repeat: no-repeat;
     background-size: contain;
+   
+    border: 2px solid purple;
 }
 
 
-.containerCaterTxt-fluid{
-    border: 2px solid red;
-    background-color: white;
-}
 
-.CaterTxt {
-    font-size: 80%;
-}
 
-.containerTnI-fluid {
-    border: 2px solid aqua;
+.caterTxt {
+    font-size: 10px;
     
 }
+
 
 .containerMH-fluid {
     border: 2px solid orange;
     background-color: white;
-    width: 90%;
-    
+    text-align: center;
+    margin-bottom: 5%;
 }
 
 /* Cater Page End */
+
+.testBD{
+    border: 2px solid aqua;
+}
+
+.paddingTest {
+   padding-left: 0%;
+   padding-right: 0%;
+}
+
+.flexRight{
+    display: flex;
+    justify-content: right;
+}
+
+.bGWhite{
+    background-color: white;
+}
+
+
+
+.imgCtr{
+    width: 100%;
+   
+}
+
+.txtFit {
+    height: 100%;
+}
