navbar and footer finished

--- a/styles/calebstyles.css
+++ b/styles/calebstyles.css
@@ -18,7 +18,57 @@ body {
     background-image: url(/assets/RestaurantMockupFiles/assets/bgtexture.jpg);
 }
 
+.navbar{
+    width: 90%;
+    margin: 0 auto;
+}
+
+.navbar-nav li a{
+    font-family: 'Fugaz', sans-serif;
+    color:#5f002b;
+}
+
+.navbar{
+    padding-bottom: 25px;
+}
+
+footer{
+    width: 100%;
+    padding-top: 50px;
+}
+
+.footBox{
+    padding: 0px !important;
+}
+
+.left{
+    font-family: 'Montauk', sans-serif;
+    color:#5f002b;
+    padding: 0px !important;
+}
+
+.right{
+    font-family: 'Montauk', sans-serif;
+    color: #5f002b;
+    padding: 0px !important;
+    text-align: right;
+}
+
+.right img {
+    padding-bottom: 10px;
+}
+
+.flexMe{
+    width: 100%;
+    display: inline-flex;
+    flex-wrap: nowrap;
+    margin: 0 auto;
+
+}
+
 /* About Page */
+
+
 
 .cont-box{  
     width: 90%;
