--- a/styles/style.css
+++ b/styles/style.css
@@ -111,8 +111,8 @@ body {
 
 .footBox{
     padding: 0px !important;
-    margin-left: 80px;
-    margin-right: 80px;
+    /* margin-left: 80px;
+    margin-right: 80px; */
 }
 
 .left{
