--- a/styles/calebstyles.css
+++ b/styles/calebstyles.css
@@ -90,6 +90,13 @@ footer{
     padding: 20px 30px;
 }
 
+
+@media only screen and (min-width: 1801px){
+    .textbox{
+        font-size: large;
+        line-height: 1.1;
+    }
+}
 @media only screen and (min-width: 1441px) and (max-width: 1800px){
     .textbox{
         font-size: medium;
