after peer review

--- a/styles/style.css
+++ b/styles/style.css
@@ -350,6 +350,7 @@ hr {
 .ourCSH{
     font-family: 'Fugaz';
     color: #5f002b;
+    padding-top: 15px;
 }
 .ourCSP{
     font-family: 'MontaukLight';
